[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/images/Icons/Armor/hm_t_01.png" type="Texture" id=1]
[ext_resource path="res://Assets/images/Icons/Armor/staff_05_t.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/Icons/Armor/b_t_05.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/CharacterChoise.gd" type="Script" id=4]
[ext_resource path="res://fonts/UI/FontChracterStats.tres" type="DynamicFont" id=5]


[node name="CharSelect" type="Control"]
anchor_right = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_right = 1080.0
margin_bottom = 270.0
custom_constants/separation = 0

[node name="char03" type="Button" parent="CenterContainer/HBoxContainer"]
margin_right = 270.0
margin_bottom = 270.0
rect_min_size = Vector2( 270, 270 )

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/HBoxContainer/char03"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 240 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char02" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 270.0
margin_right = 540.0
margin_bottom = 270.0
rect_min_size = Vector2( 270, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/HBoxContainer/char02"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 240 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char01" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 540.0
margin_right = 810.0
margin_bottom = 270.0
rect_min_size = Vector2( 270, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/char01"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 240 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char04" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 810.0
margin_right = 1080.0
margin_bottom = 270.0
rect_min_size = Vector2( 270, 270 )
custom_fonts/font = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/char04"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 240 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/HBoxContainer/char03" to="." method="_on_char03_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/char02" to="." method="_on_char02_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/char01" to="." method="_on_char01_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/char04" to="." method="_on_char04_pressed"]
